--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>You win the game by matching your total score to the random number, you lose the game if your total score
             goes above the random number.</p>
         <p>The value of each crystal is hidden from you until you click on it.</p>
-        <p>Each time the game starts, the game will change the value of eah crystal.</p>
+        <p>Each time the game starts, the game will change the value of each crystal.</p>
 
     </div>
     <div class="container">
